MainActivity  - Add btn que verificar valores do containerList
CtrlContainerList
  - Implementado o metodo onRestoreInstanceState, que resgata os valores do SaveIntance e seta os valores de volta as varaveis  do componente.
  - Criado metodo attachItensToContainer(), que após faz loop a lista do mValue e adicionar os itens no linera do container.
  - Criado metodo updateItemQtyLabel que atualiza o contador de iten na lista.
  -Modificado o  setmValue, modificando a validação do default_val , para size > 0 e se o primeiro item é verdadeiro.

Res
  - Activit_Main.xml
   - Add o btn que checa valores.
  - ctrl_container_list
    - Add ScrollView "envolvendo" o linear_layout do container para permitir scroll na lista conforme ela cresça.

--- a/app/src/main/res/layout/ctrl_container_list.xml
+++ b/app/src/main/res/layout/ctrl_container_list.xml
@@ -67,7 +67,7 @@
 
                 <View
                     android:layout_width="5dp"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent" />
 
                 <TextView
                     android:id="@+id/ctrl_container_list_tv_qty_val"
@@ -79,19 +79,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/mLib_color_gray_1"
-                android:padding="1dp"
-                />
+                android:padding="1dp" />
 
         </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/ctrl_container_list_ll_container"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="5dp">
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:id="@+id/ctrl_container_list_ll_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="5dp">
 
-    </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
