--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,10 +36,20 @@
         android:text="Case Sensitive"
         />
 
+    <Button
+        android:id="@+id/main_btn_check_val"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Check Value"
+        android:layout_gravity="center"/>
+
     <ctrls.CtrlContainerList
         android:id="@+id/main_ctrl_002"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
+
+
 
 
 </LinearLayout>
